@@ -9,3 +9,6 @@ Another cool feature would be the capabilitie to
 capture video from the screen, allowing to save in .gif
 or .avi
 >>
+* key press recording/playing
+* view flash/ram/memory map from mem window
+* tracing of mem access or others
