@@ -3,6 +3,9 @@ SubVersion: $Id$
 - ??/??/2007, version 2.81f
 	- [kevin] $2389: don't use \n in the breakpoint window status bar
 	- [kevin] $2390: fixed default hardware version for Voyage 200
+	- [roms]  $2409: added KDE desktop files & associations
+	- [roms]  $2415: allow to load saved states by DnD
+	- [roms]  $2417: allow to directly load ROM/TIB/SAV files from command line; maintained compatibility with older switches
 
 - ??/??/2007, version 2.81e
 	- [kevin] $2348: delete the temporary file instead of erroring if the user cancels the receive file dialog
